--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Donate!</title>
-	<link href="css/styles.css" rel="stylesheet">
+	<link href="css/styles-v1.1.css" rel="stylesheet">
 </head>
 <body>
+	
 	<div class='form-container'>
+		
 		<form method="POST" action="https://yoomoney.ru/quickpay/confirm">
+			<h1>Choose amount to donate</h1>
 			<input type="hidden" name="receiver" value="410011837841236"/>
 			<input type="hidden" name="label" value="$order_id"/>
 			<input type="hidden" name="quickpay-form" value="button"/>
